# rd-bedrock-nova

./: .gitignore  DEPLOY.md  Dockerfile.agent-core  README.md  amplify.yml  package.json  pyproject.toml  tasks.csv
agents/: package.json  tsconfig.json
agents/file/: index.ts
agents/generation/: index.ts
agents/graph/: index.ts
agents/knowledge-base/: index.ts
agents/memory/: index.ts
agents/strands/: index.ts
agents/voice/: index.ts
amplify/: .gitignore  backend.ts  package.json  tsconfig.json  vitest.config.ts
amplify/auth/: resource.ts
amplify/data/: resource.ts
amplify/storage/: resource.ts
backend/: package.json  tsconfig.json
docker/: Dockerfile.agent-core  Dockerfile.audio-service  Dockerfile.search-service  Dockerfile.video-service
docs/: 00-overview.md  AMPLIFY_SANDBOX_GUIDE.md  DEPLOY.md  DEPLOY_CHECKLIST.md  E2E_TESTING.md  FINAL-REPORT.md  TASKS.csv  architecture-prot.md  architecture.drawio  architecture.md  cost-analysis.md  performance-baseline.md
docs/01-planning-analysis/: 01-rdra-requirements.md  02-ddd-domain-model.md  03-event-storming.md
docs/02-architecture/: 01-clean-architecture.md  02-event-sourcing-cqrs.md  03-12factor-agents.md  04-microservices-design.md
docs/03-frontend/: 01-fsd-structure.md  02-atomic-design.md
docs/04-testing/: 01-tdd-strategy.md
docs/05-infrastructure/: 01-aws-infrastructure.md  02-security.md  03-deployment.md  04-monitoring.md  05-cost-optimization.md
docs/architecture/: 00-overview.md  01-rdra-requirements.md  02-ddd-domain-model.md  03-event-storming.md  04-clean-architecture.md  05-12-agent-factors.md  06-4-layer-structure.md  08-knowledge-domain.md  09-service-selection.md
docs/operations/: SES_PRODUCTION_SETUP.md
e2e/: 01-app-load.spec.ts  02-auth-flow.spec.ts  03-api-connectivity.spec.ts  05-resource-loading.spec.ts
frontend/: .gitignore  amplify_outputs.json  next.config.js  package.json  tailwind.config.js
infra/: Makefile  __init__.py  app.py
tests/: playwright.config.ts
(+198 files in other folders)
